Help Crud + Backup

--- a/Frontend/src/app/Delegation/view-delegation/view-delegation.component.css
+++ b/Frontend/src/app/Delegation/view-delegation/view-delegation.component.css
@@ -165,3 +165,11 @@ a:not([href]):not([class]), a:not([href]):not([class]):hover {
   text-decoration: underline;
   cursor: pointer !important;
 }
+
+
+
+.MenuButton{
+  background-color:#fff;
+  color: #000; 
+  width: 200px;
+}
