--- a/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
+++ b/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
@@ -17,7 +17,13 @@
       <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
       <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font" routerLink="/ViewHelp">Manage Help</a>
-      <a mat-list-item class="uni-font">Settings</a>
+      <a mat-list-item class="uni-font" [matMenuTriggerFor]="menu">Settings</a>
+      <mat-menu #afterMenu="matMenu" xPosition="after" #menu="matMenu">
+        <button class="MenuButton" mat-menu-item (click)="openDialog()" >
+          Backup System</button>
+        <button class="MenuButton" mat-menu-item >
+          Restore System</button>
+      </mat-menu>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="Main-content">
@@ -31,7 +37,7 @@
 
       <mat-form-field appearance="fill"
                       style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
-        <mat-label>Search</mat-label>
+        <mat-label>Search by Name</mat-label>
         <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
@@ -74,7 +80,7 @@
 
         <ng-container matColumnDef="doaForm">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegation Form </th>
-          <td mat-cell *matCellDef="let row; let i = index;"> <a (click)="openPDFInNewTab(i)" target="_blank" style="color: black;">{{FileDetails[i].FileName}}</a></td>
+          <td mat-cell *matCellDef="let row; let i = index;"> <a (click)="openPDFInNewTab(i)" target="_blank" style="color: rgb(65, 143, 227);" matTooltip="This will direct you to the Delegation Form PDF, where you can find information regarding signed Acknowledgement and approval of the delegation for this specific Delegation of Authority">{{FileDetails[i].FileName}}</a></td>
         </ng-container>
 
         <ng-container matColumnDef="status">
