--- a/Frontend/src/app/create-help/create-help/create-help.component.css
+++ b/Frontend/src/app/create-help/create-help/create-help.component.css
@@ -12,54 +12,52 @@ mat-error {
   }
   
   .loader {
+    width: 175px;
+    height: 80px;
+    display: block;
+    margin: auto;
+    background-image: radial-gradient(circle 25px at 25px 25px, #244688 100%, transparent 0), radial-gradient(circle 50px at 50px 50px, #244688 100%, transparent 0), radial-gradient(circle 25px at 25px 25px, #244688 100%, transparent 0), linear-gradient(#244688 50px, transparent 0);
+    background-size: 50px 50px, 100px 76px, 50px 50px, 120px 40px;
+    background-position: 0px 30px, 37px 0px, 122px 30px, 25px 40px;
+    background-repeat: no-repeat;
     position: relative;
-    border-style: solid;
     box-sizing: border-box;
-    border-width: 40px 60px 30px 60px;
-    border-color: #3760C9 #96DDFC #96DDFC #36BBF7;
-    animation: envFloating 1s ease-in infinite alternate;
+  }
+  .loader::after {
+    content: '';
+    left: 50%;
+    bottom: 30px;
+    transform: translate(-50%, 0);
+    position: absolute;
+    border: 15px solid transparent;
+    border-bottom-color: #94CC5B;
+    box-sizing: border-box;
+    animation: fadePull 1s linear infinite;
+  }
+  .loader::before {
+    content: '';
+    left: 50%;
+    bottom: 15px;
+    transform: translate(-50%, 0);
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background: #94CC5B;
+    box-sizing: border-box;
+    animation: fadePull 1s linear infinite;
   }
   
-    .loader:after {
-      content: "";
-      position: absolute;
-      right: 62px;
-      top: -40px;
-      height: 70px;
-      width: 50px;
-      background-image: linear-gradient(#94CC5B 45px, transparent 0), linear-gradient(#94CC5B 45px, transparent 0), linear-gradient(#94CC5B 45px, transparent 0);
-      background-repeat: no-repeat;
-      background-size: 30px 4px;
-      background-position: 0px 11px, 8px 35px, 0px 60px;
-      animation: envDropping 0.75s linear infinite;
-    }
-  
-  @keyframes envFloating {
+  @keyframes fadePull {
     0% {
-      transform: translate(-2px, -5px)
+      transform: translate(-50%, 15px);
+      opacity: 0;
     }
-  
-    100% {
-      transform: translate(0, 5px)
-    }
-  }
-  
-  @keyframes envDropping {
-    0% {
-      background-position: 100px 11px, 115px 35px, 105px 60px;
+    50% {
+      transform: translate(-50%, 0px);
       opacity: 1;
     }
-  
-    50% {
-      background-position: 0px 11px, 20px 35px, 5px 60px;
-    }
-  
-    60% {
-      background-position: -30px 11px, 0px 35px, -10px 60px;
-    }
-  
-    75%, 100% {
-      background-position: -30px 11px, -30px 35px, -30px 60px;
+    100% {
+      transform: translate(-50%, -15px);
       opacity: 0;
     }
   }
