--- a/Frontend/src/app/update-consumable-stock/update-consumable-stock.component.html
+++ b/Frontend/src/app/update-consumable-stock/update-consumable-stock.component.html
@@ -13,7 +13,7 @@
                     </mat-form-field>
                     <div mat-dialog-actions>
                         <div class="wrapper">
-                            <button class="" type="submit" [disabled]="!myForm.valid">
+                            <button class="" type="submit" [disabled]="!myForm.valid" matTooltip="Update stock levels counted for current stock on hand">
                                 <span>Update Stock</span>
                                 <div class="success">
                                     <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
