--- a/Frontend/src/app/view-branch/view-branch/view-branch.component.css
+++ b/Frontend/src/app/view-branch/view-branch/view-branch.component.css
@@ -161,3 +161,10 @@ button {
     button:focus {
       outline: none;
     }
+
+
+    .MenuButton{
+      background-color:#fff;
+      color: #000; 
+      width: 200px;
+    }
