--- a/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
+++ b/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
@@ -62,7 +62,8 @@
                 <ng-container matColumnDef="lines">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
-                        <button mat-raised-button routerLink="/ViewBudgetLines/{{BudgetAllocations.budget_ID}}"
+                        <button mat-raised-button matTooltip="This will take you to the view budegt lines page where you can create edit or delete budget lines for this specific Budget Allocation"
+                            routerLink="/ViewBudgetLines/{{BudgetAllocations.budget_ID}}"
                             style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%;background-color: #94CC5B;"
                             type="button">Budget Lines</button>
                     </td>
