--- a/Frontend/src/app/view-help/view-help/view-help.component.html
+++ b/Frontend/src/app/view-help/view-help/view-help.component.html
@@ -17,7 +17,13 @@
         <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
         <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
         <a mat-list-item class="uni-font" routerLink="/ViewHelp">Manage Help</a>
-        <a mat-list-item class="uni-font">Settings</a>
+        <a mat-list-item class="uni-font" [matMenuTriggerFor]="menu">Settings</a>
+        <mat-menu #afterMenu="matMenu" xPosition="after" #menu="matMenu">
+          <button class="MenuButton" mat-menu-item (click)="openDialog()" >
+            Backup System</button>
+          <button class="MenuButton" mat-menu-item >
+            Restore System</button>
+        </mat-menu>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
@@ -27,10 +33,15 @@
   
       <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
   
-        <button mat-raised-button
+        <button mat-raised-button 
           style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
           routerLink="/CreateHelp" *ngIf="rAdmin">
-          Create Help
+          Add Help
+        </button>
+        <button mat-raised-button matTooltip="This will direct you to the User Manual PDF, where you can find information regarding the entire system"
+          style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+          (click)="openUserManualInNewTab()">
+          View User Manual
         </button>
   
         <span style="flex: 1 1 auto;"></span>
@@ -48,6 +59,7 @@
         <span class="loader" id="loading"></span>
       </div>
   
+                                                   <!---->
       <div style="margin-right:1%; margin-left:1%;" *ngIf="rAdmin">
         <table mat-table [dataSource]="SearchedHelp" class="mat-elevation-z8" id="table">
   
@@ -58,7 +70,7 @@
   
           <ng-container matColumnDef="helpCategory">
             <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Category </th>
-            <td mat-cell *matCellDef="let Helps"> {{Helps.helpCategory.name}} </td>
+            <td mat-cell *matCellDef="let Helps"> {{Helps.help_Category.name}} </td>
           </ng-container>
          
           <ng-container matColumnDef="name">
@@ -72,17 +84,19 @@
             <td mat-cell *matCellDef="let Helps"> {{Helps.description}} </td>
           </ng-container>
   
-          <!--Files for Video-->
+          
           <ng-container matColumnDef="video">
             <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Video </th>
             <td mat-cell *matCellDef="let Helps; let i = index;">
-              <a (click)="openVideoInNewTab(i)" target="_blank" style="color: black;">{{vFileDetails[i].FileName}}</a></td>
+              <a (click)="openVideoInNewTab(vFileDetails[i].FileURL)" style="cursor: pointer; color: rgb(65, 143, 227);" matTooltip="This will allow you to view the help video regarding this specific help section">{{vFileDetails[i].FileName}}</a>
+            </td>
           </ng-container>
+
           <!--Files for User_Manual-->
           <ng-container matColumnDef="user_Manual">
             <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> User Manual </th>
             <td mat-cell *matCellDef="let Helps; let i = index;">
-               <a (click)="openPDFInNewTab(i)" target="_blank" style="color: black;">{{FileDetails[i].FileName}}</a></td>
+               <a (click)="openPDFInNewTab(i)" target="_blank" style="color: rgb(65, 143, 227);" matTooltip="This will direct you to the User Manual PDF, where you can find information regarding the entire system">{{FileDetails[i].FileName}}</a></td>
           </ng-container>
   
          
@@ -95,7 +109,7 @@
                 [routerLink]="['/EditEmp', Employees.user_Id]" type="button"><mat-icon matPrefix
                   style="margin-right:10%;">edit</mat-icon>Edit</button>-->
   
-              <button class="noselect" *ngIf="rAdmin" [routerLink]="['/EditHelp', Helps.help_ID]" type="button" style="background-color: #94CC5B;">
+              <button class="noselect" *ngIf="rAdmin" [routerLink]="['/EditHelp', Helps.help_ID]" type="button" style="background-color: #94CC5B;" >
                 <span class='text'>Edit</span>
                 <span class="icon" style="border-left: 1px solid #94CC5B; ">
                   <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" /></svg>
@@ -112,7 +126,7 @@
                 (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix
                   style="margin-right:10%;">delete</mat-icon>Delete</button>-->
   
-              <button class="noselect" *ngIf="rAdmin" (click)="DeleteRequest(Helps.help_ID)">
+              <button class="noselect" *ngIf="rAdmin" (click)="DeleteRequest(Helps.help_ID)" >
                 <span class='text'>Delete</span>
                 <span class="icon">
                   <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#000000}</style><path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg>
@@ -127,6 +141,7 @@
       </div>
 
 
+
       <div style="margin-right:1%; margin-left:1%;" *ngIf="rUser">
         <table mat-table [dataSource]="SearchedHelp" class="mat-elevation-z8" id="table">
   
@@ -137,7 +152,7 @@
   
           <ng-container matColumnDef="helpCategory">
             <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Category </th>
-            <td mat-cell *matCellDef="let Helps"> {{Helps.helpCategory.name}} </td>
+            <td mat-cell *matCellDef="let Helps"> {{Helps.help_Category.name}} </td>
           </ng-container>
          
           <ng-container matColumnDef="name">
@@ -151,25 +166,34 @@
             <td mat-cell *matCellDef="let Helps"> {{Helps.description}} </td>
           </ng-container>
   
+      
           <!--Files for Video-->
           <ng-container matColumnDef="video">
             <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Video </th>
             <td mat-cell *matCellDef="let Helps; let i = index;">
-              <a (click)="openVideoInNewTab(i)" target="_blank" style="color: black;">{{vFileDetails[i].FileName}}</a></td>
+              <a (click)="openVideoInNewTab(vFileDetails[i].FileURL)" style="cursor: pointer; color: rgb(65, 143, 227);" matTooltip="This will allow you to view the help video regarding this specific help section">{{vFileDetails[i].FileName}}</a>
+            </td>
           </ng-container>
+
           <!--Files for User_Manual-->
           <ng-container matColumnDef="user_Manual">
             <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> User Manual </th>
             <td mat-cell *matCellDef="let Helps; let i = index;">
-              <a (click)="openPDFInNewTab(i)" target="_blank" style="color: black;">{{FileDetails[i].FileName}}</a></td>
+               <a (click)="openPDFInNewTab(i)" target="_blank" style="color: rgb(65, 143, 227);" matTooltip="This will direct you to the User Manual PDF, where you can find information regarding the entire system">{{FileDetails[i].FileName}}</a></td>
           </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumnsUser" style="background-color:#244688;"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumnsUser;"></tr>
         </table>
       </div>
-  
-  
-  
+
+
     </mat-sidenav-content>
   </mat-sidenav-container>
+
+
+
+
+
+
+  
