--- a/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
+++ b/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
@@ -18,7 +18,13 @@
             <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
             <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
             <a mat-list-item class="uni-font" routerLink="/ViewHelp">Manage Help</a>
-            <a mat-list-item class="uni-font">Settings</a>
+            <a mat-list-item class="uni-font" [matMenuTriggerFor]="menu">Settings</a>
+        <mat-menu #afterMenu="matMenu" xPosition="after" #menu="matMenu">
+          <button class="MenuButton" mat-menu-item (click)="openDialog()" >
+            Backup System</button>
+          <button class="MenuButton" mat-menu-item >
+            Restore System</button>
+        </mat-menu>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
@@ -27,7 +33,7 @@
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
-            <button mat-raised-button
+            <button mat-raised-button 
                 style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
                 routerLink="/AddMandateLimit">
                 Create Mandate Limit
@@ -61,7 +67,7 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let MandateLimits" style="width:100px;">
 
-                      <button class="noselect" routerLink="/EditMandateLimit/{{MandateLimits.mandate_ID}}" type="button" style="background-color: #94CC5B;">
+                      <button class="noselect" routerLink="/EditMandateLimit/{{MandateLimits.mandate_ID}}" type="button" style="background-color: #94CC5B;" >
                         <span class='text'>Edit</span>
                         <span class="icon" style="border-left: 1px solid #94CC5B; ">
                           <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" /></svg>
@@ -79,7 +85,7 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let MandateLimits" style="width:140px;">
 
-                      <button class="noselect" (click)="DeleteMandateLimit(MandateLimits.mandate_ID)">
+                      <button class="noselect" (click)="DeleteMandateLimit(MandateLimits.mandate_ID)" >
                         <span class='text'>Delete</span>
                         <span class="icon">
                           <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#000000}</style><path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg>
