View and Create Procurement Request Added

--- a/Frontend/src/app/main-nav/main-nav.component.html
+++ b/Frontend/src/app/main-nav/main-nav.component.html
@@ -11,7 +11,7 @@
        mat-button (click)="reload()">Inventory</a>
     <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;"
        routerLink="/ViewBudgetAllocation" mat-button (click)="reload()">Finance</a>
-    <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button (click)="reload()">Procurement</a>
+    <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewProcurementRequest" mat-button (click)="reload()">Procurement</a>
     <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/request-view"
        mat-button (click)="reload()">Vendor</a>
     <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button (click)="reload()">Reports</a>
