--- a/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
+++ b/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
@@ -103,7 +103,7 @@
 <ng-template #NotApproved>
     <div style="display: flex; justify-content: center; align-items: center;">
         <mat-card style="width: 1000px; margin-top: 1%; align-items: center; ">
-            <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px">
+            <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="AddProcurementRequestB()">
                 <mat-card-header>
                     <mat-card-title
                         style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Create
@@ -162,29 +162,29 @@
                                     <br />
                   
                                     <input type="file" id="file1" placeholder="" formControlName="OtherQuote1" style="border: solid #244688; border-radius: 5px; "
-                                           accept=".pdf" required>
+                                           accept=".pdf" (change)="onFile1Upload($event)" required>
                   
                                   </mat-card-content>
                                 </td>
     
                                 <td style="width:100%;">
                                     <mat-card-content>
-                                      <label style=" color:black;">Quote 1:</label>
+                                      <label style=" color:black;">Quote 2:</label>
                                       <br />
                     
                                       <input type="file" id="file2" placeholder="" formControlName="OtherQuote2" style="border: solid #244688; border-radius: 5px; "
-                                             accept=".pdf" required>
+                                             accept=".pdf" (change)="onFile2Upload($event)" required>
                     
                                     </mat-card-content>
                                   </td>
     
                                   <td style="width:100%;">
                                     <mat-card-content>
-                                      <label style=" color:black;">Quote 1:</label>
+                                      <label style=" color:black;">Quote 3:</label>
                                       <br />
                     
                                       <input type="file" id="file3" placeholder="" formControlName="OtherQuote3" style="border: solid #244688; border-radius: 5px; "
-                                             accept=".pdf" required>
+                                             accept=".pdf" (change)="onFile3Upload($event)" required>
                     
                                     </mat-card-content>
                                   </td>
@@ -196,11 +196,6 @@
                     </mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
-                  <!--<button mat-raised-button type="submit"
-                          style="width: 150px; font-size: 14px; height: 42px; margin: 10px;" [disabled]="!myForm.valid"
-                          [ngStyle]="{'background-color': !myForm.valid ? 'rgba(148, 204, 91, 0.6)' : '#94CC5B','color': !myForm.valid ? 'rgba(255, 255, 255, 0.6)' : 'white'}">
-                    Save
-                  </button>-->
     
                   <div class="wrapper">
                     <button class="" type="submit" [disabled]="!myForm.valid">
