--- a/Frontend/src/app/view-admin/view-admin.component.html
+++ b/Frontend/src/app/view-admin/view-admin.component.html
@@ -53,7 +53,7 @@
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>
-          <td mat-cell *matCellDef="let Admins">{{Admins.admin_ID}}</td>
+          <td mat-cell *matCellDef="let Admins">{{Admins.user.user_Id}}</td>
         </ng-container>
 
         <!-- name Column -->
