Notification & Temp Access update

--- a/Frontend/src/app/main-nav/main-nav.component.html
+++ b/Frontend/src/app/main-nav/main-nav.component.html
@@ -20,7 +20,7 @@
     <img *ngIf="this.isLoggedIn === true" class="image-container" src="{{usr.profile_Picture}}" style="object-fit: cover;" [matMenuTriggerFor]="beforeMenu" />
     <mat-menu #beforeMenu="matMenu" xPosition="before">
       <button mat-menu-item routerLink="/Profile" (click)="reload()"><mat-icon matPrefix>pageview</mat-icon>Profile</button>
-      <button mat-menu-item (click)="reload()"><mat-icon matPrefix>calendar_today</mat-icon>Calendar</button>
+      <button mat-menu-item routerLink="/ViewCalendar" (click)="reload()"><mat-icon matPrefix>calendar_today</mat-icon>Calendar</button>
       <button mat-menu-item (click)="Logout()"><mat-icon matPrefix>logout</mat-icon>Logout</button>
     </mat-menu>
   </mat-toolbar>
