--- a/Frontend/src/app/view-pending-procurement-request/view-pending-procurement-request.component.html
+++ b/Frontend/src/app/view-pending-procurement-request/view-pending-procurement-request.component.html
@@ -77,7 +77,7 @@
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
                         <button class="noselect" type="button"
-                            style="background-color: #94CC5B;" routerLink="/EditConsumable">
+                            style="background-color: #94CC5B;" routerLink="/ViewProcurementRequestApproval/{{procurement.procurement_Request_ID}}">
                             <span class='text'>View</span>
                             <span class="icon" style="border-left: 1px solid #94CC5B; ">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
