Updates and fixes

--- a/Frontend/src/app/Delegation/view-delegation/view-delegation.component.css
+++ b/Frontend/src/app/Delegation/view-delegation/view-delegation.component.css
@@ -166,7 +166,9 @@ a:not([href]):not([class]), a:not([href]):not([class]):hover {
   cursor: pointer !important;
 }
 
-
+#rab :hover {
+  background-color: #FE4945;
+}
 
 .MenuButton{
   background-color:#fff;
