--- a/Frontend/src/app/Delegation/reject-delegation/reject-delegation.component.html
+++ b/Frontend/src/app/Delegation/reject-delegation/reject-delegation.component.html
@@ -1,38 +1,25 @@
 <h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;"
     *ngIf="showConfirmationDialog == true">
-  REJECT DELEGATION REQUEST
+  REVOKE TEMPORARY ACCESS
 </h1>
 
-<form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px"
-      (ngSubmit)="onSubmit(data.ID)">
+<div mat-dialog-content *ngIf="showConfirmationDialog == true">
+  <p>
+    You are about to revoke temporary access from user <strong>{{Delegation.user.username}}</strong>.
+  </p>
 
-  <div mat-dialog-content *ngIf="showConfirmationDialog == true">
+  <p>Are you sure you want to continue?</p>
+</div>
+<div mat-dialog-actions align="end" *ngIf="showConfirmationDialog == true">
+  <button mat-raised-button (click)="onConfirm(data.ID)" style="color: white; background-color: #94CC5B;">Yes</button>
+  <button mat-raised-button (click)="onCancel()" style="color: white; background-color: #244688;">Cancel</button>
+</div>
 
-    <label style=" color:black;">Please select reason for rejection.</label>
-    <br />
-    <mat-form-field>
-      <mat-label>Choose one</mat-label>
-      <mat-select formControlName="Status_ID" required>
-        <mat-option>---</mat-option>
-        <mat-option *ngFor="let s of statuses" [value]="s.status_ID">{{s.name}}</mat-option>
-      </mat-select>
-    </mat-form-field>
+<ng-container *ngIf="showSuccessDialog == true">
+  <h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;">REVOKE SUCCESSFUL</h1>
+  <div mat-dialog-content>
+    <p>
+      Temporary Access has been successfully revoked from user <strong>{{Delegation.user.username}}</strong>.
+    </p>
   </div>
-  <div mat-dialog-actions align="end" *ngIf="showConfirmationDialog == true">
-    <button mat-raised-button type="submit" [disabled]="!myForm.valid" style="color: white; background-color: #94CC5B;">Yes</button>
-    <button mat-raised-button (click)="onCancel()" style="color: white; background-color: #244688;">Cancel</button>
-  </div>
-
-</form>
-
-  
-
-  <ng-container *ngIf="showSuccessDialog == true">
-    <h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;">REJECT SUCCESSFUL</h1>
-    <div mat-dialog-content>
-      <p>
-        The Request No <strong>{{data.ID}}</strong> has been <strong style="color:red">REJECTED</strong>
-        successfully!
-      </p>
-    </div>
-  </ng-container>
+</ng-container>
